--- a/index.html
+++ b/index.html
@@ -1,9 +1,28 @@
 <!DOCTYPE html>
-<html lang="es">
+<html>
     <head>
-        
+        <title>Agostina Mariela Rojas</title>
     </head>
     <body>
-
+        <header>
+            <nav>
+                <ol>
+                    <li>
+                        <a>"Portafolio"</a>
+                    </li>
+                    <li>
+                        <a>"Experiencia"</a>
+                    </li>
+                    <li>
+                        <a>"Futuro"</a>
+                    </li>
+                </ol>
+            </nav>
+        </header>
+        <section>Sección principal</section>
+        <section>Sección Portafolio</section>
+        <section>Sección Eventos</section>
+        <section>Sección Contactos</section>
+        <footer>footer</footer>
     </body>
 </html>
