Segundo Maqueteado hasta atributos

--- a/index.html
+++ b/index.html
@@ -19,9 +19,32 @@
                 </ol>
             </nav>
         </header>
-        <section>Sección principal</section>
-        <section>Sección Portafolio</section>
-        <section>Sección Eventos</section>
+        <section>
+            <h1>Hola! Soy <strong>Agostina Rojas</strong> soy una estudiante <br> con pasión sobre el <strong>diseño</strong> y el <strong>desarollo</strong> web</h1></section>
+            <img> Imagen de portada 
+            <section>
+                <h2>Portafolio (Proyecto Destacados)</h2>
+                <article>
+                    <h3>Fotografías en recitales</h3>
+                    <h6>High Noise / Acá pasan Cosas / Innova Producciones</h6>
+                    <p>Dedicada a la fotografías en recitales en vivos. Coberturas nacionales e internacionales. Con especial atención al estido Rock y el Pop.</p>
+                    <p><small> <strong>Cosquin rock, Ariana Grande, Epica, Eruca Sativa, etc</strong> </small></p>
+                    <p><small> <strong>Podes encontrarlo todo en IG</strong> </small></p>
+                    <p><small> <strong>@agosroojas @highnoise @innovaproduciones </strong> </small></p>
+                </article>
+            </section>
+        <section>
+            <article>
+                <h2>Más sobre mi Experiencia</h2>
+                <figure>
+                    <img>
+                </figure>
+                <h3>Introdución a la Programación</h3>
+                <a>Ver página Polotic</a>
+                <p>Curso introductorio a la programación brindando por el polotic</p>
+                <p><small><strong>Curso dictado en el 2020</strong></small></p>
+            </article>
+        </section>
         <section>Sección Contactos</section>
         <footer>footer</footer>
     </body>
